# riscv-emu

./: .gitignore  CMakeLists.txt
scripts/: assemble.sh
src/: bus.cpp  bus.h  decode.cpp  decode.h  defs.h  execute.cpp  execute.h  hart.cpp  hart.h  machine.cpp  machine.h  main.cpp  ram.cpp  ram.h
